All race skills qualified with respect to skills.

--- a/latex/fantasy/races.tex
+++ b/latex/fantasy/races.tex
@@ -11,38 +11,38 @@
 
 \race{Джудже}{2}{}{6-15}{1-8}{1-12}{1-8}{Виждане в тъмнина}
 {
-Джуджешки език();
+Джуджешки език(У);
 Каменоделство(Л);
 Боравене с брадва/чук(Л);
 Металургия(У);
-Ковачество()
+Ковачество(С)
 }
 
 \race{Елф}{4}{}{1-8}{6-15}{1-15}{1-12}{Неспящ; Нестареещ}
 {
-Елфичеки език();
+Елфичеки език(У);
 Лък(Л);
 Катерене();
 Магия - по избор(У);
-Оцеляване в дивото()
+Оцеляване в дивото(У)
 }
 
 \race{Върколак}{3}{}{6-16}{1-10}{1-10}{1-10}{Силна имунна система}
 {
-Оцеляване в дивото();
-Вълчи език();
-Човешки език();
+Оцеляване в дивото(У);
+Вълчи език(У);
+Човешки език(У);
 Магия-огън(У);
 Спринт(С)
 }
 
 \race{Здрачник}{4}{}{1-8}{1-15}{1-10}{6-16}{Изчезване в сянка}
 {
-Катерене();
+Катерене(Л);
 Оцеляване в дивото();
 Търговия(Х);
-Акробартика();
-Здрачничрски език()
+Акробартика(Л);
+Здрачничрски език(У)
 }
 
 \race{Немъртъв}{2}{}{1-14}{1-9}{1-10}{1-4}
@@ -54,10 +54,10 @@
 }
 {
 Магия-некромантия(У);
-Поклонничество-Смърт();
+Поклонничество-Смърт(Х);
 Строителство(У);
 Тактика(У);
-Език на немъртвите()
+Език на немъртвите(У)
 }
 
 \race{Ниог}{4}
@@ -68,11 +68,11 @@
 Фини манипулатори чрез телекинеза
 }
 {
-Староендивалски език();
-Астрономия(Ум);
-Архитектура(Ум);
-Употреба на обсадни оръжия(Ум);
-Тaктика(Ум)
+Староендивалски език(У);
+Астрономия(У);
+Архитектура(У);
+Употреба на обсадни оръжия(У);
+Тaктика(У)
 }
 
 \race{Орк}{-2}
@@ -82,11 +82,11 @@
 Жажда за кръв
 }
 {
-Език на гоблините()
+Език на гоблините(У);
 Боравене с брадва(Л);
-Оцеляване в дивото();
-Строеж на лагер();
-Проследяване в дивото()
+Оцеляване в дивото(У);
+Строеж на лагер(У);
+Проследяване в дивото(Л)
 }
 
 \race{Гоблин}{-3}
@@ -96,11 +96,11 @@
 Ранна старост
 }
 {
-Език на гобилините();
+Език на гобилините(У);
 Скриване от поглед(Л);
 Капани(Л);
-Плуване();
-Катерене()
+Плуване(С);
+Катерене(Л)
 }
 
 \race{Драконит}{4}
@@ -111,11 +111,11 @@
 Нестареещ
 }
 {
-Език-драконски
-Магия-огън
-Магия-пазене
-Двуръчен меч
-Древни легенди
+Език-драконски(У);
+Магия-огън(У);
+Магия-пазене(У);
+Двуръчен меч(Л);
+Древни легенди(У)
 }
 
 \end{multicols}
