--- a/latex/rules/combat.tex
+++ b/latex/rules/combat.tex
@@ -183,8 +183,8 @@
 
 % Състояние
 \item{Брой живи - бойци в добро здраве.}
-\item{Брой ранени - небоеспособни, в ръцете на леакрите след битка.}
-\item{Морал - равен на Дисциплина(Инт), спадне ли до 0, строят се превръща в "тълпа".}
+\item{Брой ранени - небоеспособни, в ръцете на лекарите след битка.}
+\item{Морал - равен на Дисциплина(У), спадне ли до 0, строят се превръща в "тълпа".}
 
 % Компетентност и екипировка
 \item{Ръкопашен бой - Сила + най-високото боравене с налично ръкопашно оръжие.}
