Commented out source citations of labourer SV.

--- a/latex/fantasy/items.tex
+++ b/latex/fantasy/items.tex
@@ -77,7 +77,11 @@ Illuminators   3,900
 Booksellers   6,300
 *These are licensed doctors. Total doctor SV is 350.
 
-Some other figures: There will be one noble household per 200 population, one lawyer ("advocate") per 650, one clergyman per 40 and one priest per 25-30 clergy. Businesses not listed here will most likely have an SV from 5,000 to 25,000! The "Magic Shop" means a shop where wizards can purchase spell ingredients, scroll paper and the like, not a place to buy magic swords off the shelf. The SV list was taken (mostly) from the tax list of Paris in 1292, and checked against other sources for accuracy. This list can be found in Life in a Medieval City by Joseph and Francis Geis (Harper and Row, 1981). This is a fine book by amateur historians, which includes some fascinating descriptions of medieval city life and layout. 
+Some other figures: There will be one noble household per 200 population, one lawyer ("advocate") per 650, one clergyman per 40 and one priest per 25-30 clergy. Businesses not listed here will most likely have an SV from 5,000 to 25,000! The "Magic Shop" means a shop where wizards can purchase spell ingredients, scroll paper and the like, not a place to buy magic swords off the shelf. 
+% The SV list was taken (mostly) from the tax list of Paris in 1292, and checked against other sources for accuracy.
+% This list can be found in Life in a Medieval City by Joseph and Francis Geis (Harper and Row, 1981).
+% This is a fine book by amateur historians, which includes some fascinating descriptions of medieval city life and layout.
+% <quoted>
 
 \subsection{Сгради}
 \rowcolors{1}{white}{lightgray}
