--- a/latex/fantasy/skills.tex
+++ b/latex/fantasy/skills.tex
@@ -25,6 +25,10 @@
 
 \subsection{Занаяти}
 Билкарсто (Ум)                    \\
+Ковачество(С)                     \\
+Грънчарство(Л)                    \\
+Изработка на лъкове(Л)            \\
+Тъкане, шиене и бродиране(Л)      \\
 
 \subsection{Епични провали}
 Ако при мятане на д6* се падне -5 или +6, се мята отново.
