Started reformatting from a reference book to a tutorial.
It has been around an year tht I haven't read this text.
Now that I am seeing it, it seems to be concise, but hard to read.
One should be able to read a couple of pages and start playing,
consulting the rules again when the need arises.

--- a/latex/rules/character.tex
+++ b/latex/rules/character.tex
@@ -3,20 +3,21 @@
 \section{Игрови персонаж}
 
 \subsection{Точки за герой}
-Броят точки на играч се определя от разказвача според мащаба на приключението.
-С точки за герой се закупуват както основните показатели - сила, ловкост, ум и харизма - така и положителни и отрицателни качества.
-Някои раси също струват точки за герой за да бъдат избрани.
-Уменията, които владее героят, се определят от нивото на показателят му Ум.
-\\
-\\
-\rowcolors{1}{white}{lightgray}
-\begin{tabular}{p{3cm} | p{2cm} | p{6cm} | p{3cm}}
-Ролева игра          & Точки за герой      & Тактическа игра                   & Точки       \\
-гражданин на света   & 20                  & отряд(8-13)                       & 260         \\
-герой / гений        & 30                  & бригада(3000-5000)                & 100 000     \\
-митично същество     & 50                  & армия(80 000 - 200 000)           & 4 000 000   \\
-стихия               & 100                 & група армии (400 000 - 1 000 000) & 20 000 000  \\
-\end{tabular}
+С 'точки за герой' се купуват раса, показатели и качества.
+Началните точки се определят според сценария - 20 за обикновен човек, 30 за 'герой', 50 за митично същество, 100 за бог в езическия смисъл.
+Най-често са 25-30.
+
+\subsection{Раса}
+Тук думата се ползва в значение 'биологичен вид'.
+Нека разгледаме човеците за пример.
+\begin{multicols}{2}
+\race{Човек}{0}{}{1 - 10}{1 - 10}{1 - 10}{1 - 10}{няма}{няма}
+(0) означава, че расата струва 0 точки за герой.
+Показателите означават, че играчът е длъжен да сложи поне 1 точка на всеки от тях(0 точки означава инвалид), но не повече от 10.
+Качества са свръхестествени особености на расата, които всеки неин представител притежава.
+Расови умения: могат да бъдат избрани две от списъка - те започват на 5 точки без да е нужно да се покривт изисквния за това и без да се заплащат от (Ум*5).
+Човеците са една от малкото раси, които нямат расови(т.е. културно нложени) умения.
+\end{multicols}
 
 \subsection{Качества}
 Това са както естествени, така и свръхестествени дарби или проклятия.
