Section character creation reformed as per the previous commit messagge.

--- a/latex/rules/character.tex
+++ b/latex/rules/character.tex
@@ -4,8 +4,8 @@
 
 \subsection{Точки за герой}
 С 'точки за герой' се купуват раса, показатели и качества.
-Началните точки се определят според сценария - 20 за обикновен човек, 30 за 'герой', 50 за митично същество, 100 за бог в езическия смисъл.
-Най-често са 25-30.
+Началните точки се определят според сценария - 20 за обикновен човек, 30 за 'герой', 50 за митично същество, 100 за езически бог.
+
 
 \subsection{Раса}
 Тук думата се ползва в значение 'биологичен вид'.
@@ -16,49 +16,64 @@
 Показателите означават, че играчът е длъжен да сложи поне 1 точка на всеки от тях(0 точки означава инвалид), но не повече от 10.
 Качества са свръхестествени особености на расата, които всеки неин представител притежава.
 Расови умения: могат да бъдат избрани две от списъка - те започват на 5 точки без да е нужно да се покривт изисквния за това и без да се заплащат от (Ум*5).
-Човеците са една от малкото раси, които нямат расови(т.е. културно нложени) умения.
+Човеците са една от малкото раси, които нямат расови(т.е. културно наложени) умения.
 \end{multicols}
 
-\subsection{Качества}
-Това са както естествени, така и свръхестествени дарби или проклятия.
-Полезните дарби струват по една точка за герой, а вредящите по -1, с разумното ограничение за не повече от три.
-Твърде "силни" дарби, като наприемр телепортиране, се препоръчв да се разделят на няколко базови части, всяка от която струва по 1 точка за герой.
-Едно възможно разделение от примера е телепортиране - усещане на дестинацията, телепортиране - активиране с мисъл, телепортиране - пренасяне.
 
 \subsection{Показатели}
-Рамките на показателите се определят от расата, нормално 1-10 за човеците.
-С други думи, не е позволено да се сложи по малко от 1 точка на кой да е показател, нито повече от 10.
-
+Наричани още primary attributes, защото останалите характеристики се определят от тях.
+Ето някои примери:
 \begin{itemize*}
-\item {\bfСила} – телосложение, експлозивна сила, статична сила, умение да се концентрира силата на тялото, имунна система
-\item {\bfЛовкост} – както пъргавина и гъвкавост на цялото тяло, скорост, така и прецизност във фините задачи
-\item {\bfУм} – еродиция, памет, разсъдък, концентрация, наблюдателност, схватливост
-\item {\bfХаризма} – увереност, емпатия, изразителност, излъчване
+\item {\bfСила} – щети в ръкопшен бой, мъкнене на багаж, носене на тежка пушка, тичане, оцеляване след рана
+\item {\bfЛовкост} – нападение, париране, отключване, промъкване, забелязване
+\item {\bfУм} – магия, компютри, брой умения
+\item {\bfХаризма} – преговаряне, усещне на лъжи, изтезаване
 \end{itemize*}
 
+
 \subsection{Умения}
-С \textit{(Ум * 5)} точки разполагаш, за да разпределиш по умения.
-Всяко умение е базирано върху някой показател.
-Половината от показателя (закръглено надолу) се добавя към ранговете на умението, когато то се ползва.
-Повишаване на умение на повече рангове,  отколкото е показателят, струва по три точки за всеки ранг на умението.
+Точките за умения са \textit{(Ум * 5)} и се увеличават или намаляват ако Ум се промени.
+Всяко умение е базирано върху някой показател и не може да бъде повишавано на повече точки от него.
+\\
+\\
+Глава Таблици дава някои примери за умения.
+Това са само примери и не бива да ограничават въображението!
+
+
+\subsection{Качества}
+Шапка за всичко останало.
+Искаш да започнеш с много пари? Качество 'богат'.
+Искаш да си извадиш бира от хлдилника без да ставаш? Качество 'телекинеза'.
+Искаш 1 допълнителна точка за герой? Качество късоглед.
+\\
+\\
+Полезните качества струват по 1 точка за герой, а вредящите(до три) по -1.
+Твърде "силни" дарби се разделят на няколко базови части, всяка от която струва по 1 точка за герой.
+Примерно телепортиране: визулизирне на дестинацията, пренасяне, активиране с мисъл.
+Или сакат: липсваща китка, липса на ръка.
+\\
+\\
+Отново глава Таблици дава някои идеи.
+
 
 \subsection{Носене}
 \rowcolors{1}{white}{lightgray}
-\begin{tabular}{l | l | l }
-Максимален товар, кг & Придвижване, м            & Модификация  \\
-Сила                 & Сила + Ловкост + Ловкост  &  0           \\
-Сила * 2             & Сила + Ловкост            &  0           \\
-Сила * 5             & Сила                      & -5
+\begin{tabular}{l | l | l | l }
+Максимален товар, кг & Придвижване, м/ход       & Модификация  \\
+Сила                 & Сила + Ловкост + Ловкост & 0            \\
+Сила * 2             & Сила + Ловкост           & 0            \\
+Сила * 5             & Сила                     & -5
 \end{tabular}
+\\
+Очевидно хвърлянето на раницата преди битка е добра идея, както и язденето на дълги разстояния.
 
 
 \subsection{Предмети}
 Героите започват с един среден, три евтини и колкото си пожелаят много евтини предмети.
 Прогресията е много скъп(замък) - скъп(имение) - среден(двуръчен меч) - евтин(меч) - много евтин(щит, брадва).
 
-\subsection{История и биография}
-Добре описана история на персонажа помага както на играча да се вживее, така и на разказвача да следи целите на групата.
-В случай, че не ти стигат идеите, пробвай да отговориш на следните въпроси.
+\subsection{Биография}
+Ето някои идеи за историята на персонажа:
 \begin{itemize*}
 \item{Какво искаш от утрешния ден, от идните години, от живота?}
 \item{Какво най-много цениш в хората? А кое мразиш най-много?}
