Font iwona is very nice, but not included in default pdflatex installation.
For debian: apt install texlive-fonts-extra

--- a/latex/preamble.tex
+++ b/latex/preamble.tex
@@ -16,7 +16,7 @@
 % \usepackage{comfortaa}
 % \usepackage{cyrillic}  % Doesn't work.
 % \usepackage{droid}
-\usepackage{iwona}
+% \usepackage{iwona}  % Nice, but requires texlive-fonts-extra.
 % \usepackage{kurier}
 % \usepackage{opensans}
 
