Combat section begins being modulized.

--- a/latex/rules/combat.tex
+++ b/latex/rules/combat.tex
@@ -1,6 +1,109 @@
 \section{Бойна система}
 
-\subsection{Ръкопашни дистанции}
+\subsection{Детайлност}
+В зависимост от сюжетните нужди, една схватка може да бъде описана в еднинствено изречение или на десетки страници.
+За това тази глава е организирана както следва.
+Дефинирани са голям брой правила, всяко с уникално име.
+Следващите таблици описват кои правила се препоръчва да бъдат ползвани за кои цели.
+\\
+% Represent each abstraction as a separate table.
+\rowcolors{1}{white}{lightgray}
+\newenvironment{abstractiontable}[1]
+{
+  #1
+  \\
+  \begin{tabular}{ p{3cm} | p{3cm} | p{3cm} | p{3cm} | p{3cm} }
+}
+{ \end{tabular} }
+
+%\rowcolors{1}{white}{lightgray}
+%\begin{tabular}{ p{3cm} | p{3cm} | p{3cm} | p{3cm} | p{3cm} }
+%Дуел                     & Схватка  & Битка          & Стратегия                                       & Простичко  \\
+%%
+%максимална реалистичност & a la DnD & a la Total War & решава съдбата на армии с едно хвърляне на зар & изчислително леко и универсално  \\
+%%
+%боравене                 & боравене &                &                                                &  \\
+%Щм, Щс, Щт               & Щ        &                &                                                &  \\
+%дистанция                &          &                &                                                &  \\
+%инкремент на обсег       & обсег    & обсег          &                                                &  \\
+%                         &          &                & нападение                                      &  \\
+%%
+%рани                     & ЖТ       & живи/ранени    & войни                                          &  \\
+%                         &          &                &                                                &  \\
+%\end{tabular}
+%\\
+\begin{abstractiontable}{Петте нива на абстркция}
+Дуел                     & Схватка  & Битка          & Стратегия                                       & Схематично  \\
+максимална реалистичност & a la DnD & a la Total War & решава съдбата на армии с едно хвърляне на зар & изчислително леко и универсално  \\
+\end{abstractiontable}
+
+\begin{abstractiontable}{Офанзива}
+дистанция                &          &                &                                                &  \\
+боравене                 & боравене &                &                                                &  \\
+Щм, Щс, Щт               & Щ        &                &                                                &  \\
+инкремент на обсег       & обсег    & обсег          &                                                &  \\
+                         &          & нападение      & нападение                                      &  \\
+\end{abstractiontable}
+
+\begin{abstractiontable}{Ресурси}
+рани                     & ЖТ       & здрави/ранени  & хора                                           &  \\
+\end{abstractiontable}
+
+\begin{abstractiontable}{Придвижване}
+                         &          &                & придвижвне на армия                            &  \\
+\end{abstractiontable}
+
+
+\begin{abstractiontable}{Морал}
+                         &          & морал          &                                                &  \\
+\end{abstractiontable}
+
+
+\subsection{Боравене}
+Число, описващо колко вероятно е ръкопашна или далечна атака да достигне целта си.
+Равно е на умението с използвното оръжие.
+\\
+\\
+Ръкопашна атака може да бъде парирана от врага с число, равно на тяхното боравене.
+Алтернативно, атаката може да бъде отбегната акробатично, с число (Ловкост-5), но ако следващия ход бъде извършена контраатака, тя има бонус +5(нaпадателят се е открил).
+\\
+\\
+Ако нападението е поне равно на отбраната, удар е пласиран, но може да бъде спрян от броня.
+
+
+\subsection{Щм, Щс, Щт}
+Мушакщи атаки са бързи, но оставят нападателя открит за контраатака(боравене-5 следващия ход).
+Причиняват висок смъртност(Щ*2).
+\\
+\\
+Сечащи атаки са унищожителни срещу небронирни цели.
+Постигат балнс между офнзива и отбрана, защото арката на удара действа като париране/щит.
+\\
+\\
+Трошащи атаки преминават през броня(аб/2).
+Те обаче са бавни, съотврно лесни за неброниран опонент да отбегне(боравене-5).
+
+
+
+\subsection{Напдение}
+TODO: reclim notes from Sofia.
+\\
+
+
+\subsection{Инкремент на обсег}
+За стрелящи оръжия.
+Най-голямото разстояние, на което стрелецът може да се прицели с лекота.
+През всеки инкремент метра, атаките търпят по -5 наказание.
+
+
+\subsection{Обсег}
+Разстоянието, на което стрелящото оръжие може да бъде прицелено и нанесе щети.
+
+
+\subsection{Навесна стрелба}
+
+
+\subsection{Дистанция}
 \begin{multicols}{2}
 \begin{enumerate}
 \item{директна (борба)}
@@ -23,6 +126,7 @@
 Пешо заплашва дълга (копие една ръка) и близка(нож)
 Жоро може да избере близка, средна, дълга, отдалечена или да избяга.
 }
+
 
 \subsection{Стрелба}
 \subsubsection{Единична стрелба}
