Добавки към детайлните бойни правила, най-важно Рани.

--- a/latex/rules/combat.tex
+++ b/latex/rules/combat.tex
@@ -38,11 +38,14 @@
 \end{abstractiontable}
 
 \begin{abstractiontable}{Офанзива}
-дистанция                &          &                &                                                &  \\
-боравене                 & боравене &                &                                                &  \\
-Щм, Щс, Щт               & Щ        &                &                                                &  \\
-инкремент на обсег       & обсег    & обсег          &                                                &  \\
-                         &          & нападение      & нападение                                      &  \\
+байнд                    &          &                &                                                &        \\
+дистанция                &          &                &                                                &        \\
+джаб                     &          &                &                                                &        \\
+финт                     &          &                &                                                &        \\
+боравене                 & боравене &                &                                                &        \\
+Щм, Щс, Щт               & Щ        &                &                                                &        \\
+инкремент на обсег       & обсег    & обсег          &                                                &        \\
+                         &          & нападение      & нападение                                      & бонус  \\
 \end{abstractiontable}
 
 \begin{abstractiontable}{Ресурси}
@@ -59,6 +62,12 @@
 \end{abstractiontable}
 
 
+\subsection{Байнд}
+Наместо атакуване с ръкопашно оръжие, войн може да опита да постигне доминантна позиция в байнд.
+Това изисква двамата войни да са на дистанция, в която поне единият може да удари другия.
+Следващия ход нападателят има +5 на боравене.
+
+
 \subsection{Боравене}
 Число, описващо колко вероятно е ръкопашна или далечна атака да достигне целта си.
 Равно е на умението с използвното оръжие.
@@ -71,23 +80,56 @@
 Ако нападението е поне равно на отбраната, удар е пласиран, но може да бъде спрян от броня.
 
 
+\subsection{Джаб}
+Това е бърза ръкопашна атака, която избягва откриване или дисбалансиране на себе си.
+Ползва (боравене+5), но причинява (Щ/2).
+
+
 \subsection{Щм, Щс, Щт}
 Мушакщи атаки са бързи, но оставят нападателя открит за контраатака(боравене-5 следващия ход).
-Причиняват висок смъртност(Щ*2).
+Причиняват високa смъртност(Щ*2).
 \\
 \\
-Сечащи атаки са унищожителни срещу небронирни цели.
-Постигат балнс между офнзива и отбрана, защото арката на удара действа като париране/щит.
+Сечащи атаки постигат балнс между офанзива и отбрана, защото арката на удара действа като париране/щит.
 \\
 \\
 Трошащи атаки преминават през броня(аб/2).
-Те обаче са бавни, съотврно лесни за неброниран опонент да отбегне(боравене-5).
+Те обаче са бавни, съотeрно лесни за отбягване(боравене-5).
+Заради инертността на оръжието, атаките са трудни за париране (боравене-5 за париране с остро оръжие).
+Същото важи и в обратната ситуация(боравене-5 за париране на остро оръжие).
 
 
-
-\subsection{Напдение}
-TODO: reclim notes from Sofia.
+\subsection{Рани}
+След като нападение премине през бронята, делим оставащите точки щети на Сила на ранения:
 \\
+\\
+\rowcolors{1}{white}{lightgray}
+\begin{tabular}{ p{3cm} | p{3cm} | p{3cm} | p{3cm} | p{3cm} }
+Сериозност & ръка                                                                             & крак                                                                            & торс                                     & глава                                                   \\
+>=0        & -                                                                                & -                                                                               & -                                        & o: -5 заради кръв в очите т: следващият ход се пропуска \\
+>=0.5      & о: кървене т: неизползваема 10 мин                                               & о: кървене т: поваляне                                                          & о: кървене т: следващият ход се пропуска & -5 и слдващият ход се пропуска     \\
+>=1        & о: кървене, срязани сухожилия, мускули и/или нерви т: кървене, открита фрактура  & о: кървене, срязани сухожилия, мускули и/или нерви т: кървене, открита фрактура & о: обилно кървене(перфориран бял дроб или изсипан корем) т: натрошени ребра(каквото и да е движение води до перфориран бял дроб)                 & шок, обилно кървене(черепът е пробит) \\
+>=2        & о: отрязана т: откъсната                                                         & о: отрязан т: откъснат                                                          & унищожено сърце и/или врат                                                       & о: отсечена т: унищожена \\
+\end{tabular}
+
+Кървене: натрупваща се модификация -1/ход.
+Дишането е проверка за сила с трудност -20.
+\\
+\\
+Обилно кървене: -5/ход.
+\\
+\\
+Остри щети се случват когато мушкаща или сечаща атака изцяло заобиколи бронята.
+\\
+\\
+Шок се причинява от прекомерна кръвозагуба или хидравличен шок.
+Симптомите са незабавно безсъзнание докато причинителят не бъде отстранен.
+
+
+%\\
+%\subsection{Напдение}
+%TODO: reclim notes from Sofia.
+%\\
 
 
 \subsection{Инкремент на обсег}
@@ -101,6 +143,15 @@ TODO: reclim notes from Sofia.
 
 
 \subsection{Навесна стрелба}
+
+
+\section{Финт}
+Финтът е хазарт.
+Сравнява се (боравене с вражеското оръжие + d*) с/у (боравене на врага с нашето оръжие).
+Ако е поне равно, се получава (боравене+5) до началото на следващия ход.
+В настоящия ход може да се реализира и нормална атака.
+Иначе се получава (боравене-5).
+
 
 
 \subsection{Дистанция}
