Somewhat nicer table headings.

--- a/latex/rules/combat.tex
+++ b/latex/rules/combat.tex
@@ -10,32 +10,18 @@
 \rowcolors{1}{white}{lightgray}
 \newenvironment{abstractiontable}[1]
 {
-  #1
+  \noindent
+  \textbf{#1}
   \\
   \begin{tabular}{ p{3cm} | p{3cm} | p{3cm} | p{3cm} | p{3cm} }
 }
 { \end{tabular} }
 
-%\rowcolors{1}{white}{lightgray}
-%\begin{tabular}{ p{3cm} | p{3cm} | p{3cm} | p{3cm} | p{3cm} }
-%Дуел                     & Схватка  & Битка          & Стратегия                                       & Простичко  \\
-%%
-%максимална реалистичност & a la DnD & a la Total War & решава съдбата на армии с едно хвърляне на зар & изчислително леко и универсално  \\
-%%
-%боравене                 & боравене &                &                                                &  \\
-%Щм, Щс, Щт               & Щ        &                &                                                &  \\
-%дистанция                &          &                &                                                &  \\
-%инкремент на обсег       & обсег    & обсег          &                                                &  \\
-%                         &          &                & нападение                                      &  \\
-%%
-%рани                     & ЖТ       & живи/ранени    & войни                                          &  \\
-%                         &          &                &                                                &  \\
-%\end{tabular}
-%\\
 \begin{abstractiontable}{Петте нива на абстркция}
 Дуел                     & Схватка  & Битка          & Стратегия                                       & Схематично  \\
 максимална реалистичност & a la DnD & a la Total War & решава съдбата на армии с едно хвърляне на зар & изчислително леко и универсално  \\
 \end{abstractiontable}
+
 
 \begin{abstractiontable}{Офанзива}
 байнд                    &          &                &                                                &        \\
@@ -83,6 +69,13 @@
 \subsection{Джаб}
 Това е бърза ръкопашна атака, която избягва откриване или дисбалансиране на себе си.
 Ползва (боравене+5), но причинява (Щ/2).
+
+
+\subsection{ЖТ}
+Жизнените точки са равни на Сила.
+Ако бъдат бъдат редуцирани до или под 0, съществува опасност от безсъзнание или смърт.
+При всяка рана, която резултира в ЖТ <=0, се хвърля зар.
+5 -> смърт, 3 -> безсъзнание и смъртоносна рана, 1 -> безсъзнание
 
 
 \subsection{Щм, Щс, Щт}
