Combat section pretty much finished, in the absence of my papr notes in Sofia.

--- a/latex/rules/combat.tex
+++ b/latex/rules/combat.tex
@@ -2,14 +2,14 @@
 
 \subsection{Детайлност}
 В зависимост от сюжетните нужди, една схватка може да бъде описана в еднинствено изречение или на десетки страници.
-За това тази глава е организирана както следва.
+За това настоящата глава е организирана както следва.
 Дефинирани са голям брой правила, всяко с уникално име.
-Следващите таблици описват кои правила се препоръчва да бъдат ползвани за кои цели.
+Следващите таблици описват кои правила се препоръчва да бъдат ползвани кога.
 \\
 % Represent each abstraction as a separate table.
-\rowcolors{1}{white}{lightgray}
 \newenvironment{abstractiontable}[1]
 {
+  \rowcolors{1}{white}{lightgray}
   \noindent
   \textbf{#1}
   \\
@@ -22,16 +22,18 @@
 максимална реалистичност & a la DnD & a la Total War & решава съдбата на армии с едно хвърляне на зар & изчислително леко и универсално  \\
 \end{abstractiontable}
 
-
-\begin{abstractiontable}{Офанзива}
+\begin{abstractiontable}{Ръкопашен сблъсък}
 байнд                    &          &                &                                                &        \\
 дистанция                &          &                &                                                &        \\
 джаб                     &          &                &                                                &        \\
 финт                     &          &                &                                                &        \\
 боравене                 & боравене &                &                                                &        \\
 Щм, Щс, Щт               & Щ        &                &                                                &        \\
-инкремент на обсег       & обсег    & обсег          &                                                &        \\
                          &          & нападение      & нападение                                      & бонус  \\
+\end{abstractiontable}
+
+\begin{abstractiontable}{Стрелба}
+инкремент на обсег       & обсег    & обсег          &                                                &        \\
 \end{abstractiontable}
 
 \begin{abstractiontable}{Ресурси}
@@ -41,7 +43,6 @@
 \begin{abstractiontable}{Придвижване}
                          &          &                & придвижвне на армия                            &  \\
 \end{abstractiontable}
-
 
 \begin{abstractiontable}{Морал}
                          &          & морал          &                                                &  \\
@@ -66,6 +67,31 @@
 Ако нападението е поне равно на отбраната, удар е пласиран, но може да бъде спрян от броня.
 
 
+\subsection{Дистанция}
+\begin{multicols}{2}
+\begin{itemize}
+\item{директна (борба)}
+\item{близка (нож, невъоръжен, къс меч)}
+\item{средна (меч 80см, повечето оръжия за една ръка)}
+\item{дълга (дълъг меч, копие, двуръчен меч)}
+\item{отдалечена (пика)}
+\item{извън ръкопашен обхват (стрелящи неща)}
+\end{itemize}
+Инициатива за първия удар има този с по-дълго оръжие (очевидно).
+Извън оптималната си дистанция, оръжията са на -5 атака и половин щети.
+Придвижване между дистанции се извършва след успешно хвърляне (независимо нападение или защита).
+Придвижването е или една категория в произволна посока или произволен брой категории, без да се преминава през заплашвани от някой враг дистанции.
+\end{multicols}
+\underline{Пример}:
+\emph{Пешо, с копие и нож, напада Жоро, с меч.
+Пешо връхлита и напада с копието.
+Хвърля боравене + d6* < боравене на Жоро.
+Жоро е отбягнал атаката и може да промени дистанцията.
+Пешо заплашва дълга (копие една ръка) и близка(нож)
+Жоро може да избере близка, средна, дълга, отдалечена или да побегне.
+}
+
+
 \subsection{Джаб}
 Това е бърза ръкопашна атака, която избягва откриване или дисбалансиране на себе си.
 Ползва (боравене+5), но причинява (Щ/2).
@@ -76,6 +102,15 @@
 Ако бъдат бъдат редуцирани до или под 0, съществува опасност от безсъзнание или смърт.
 При всяка рана, която резултира в ЖТ <=0, се хвърля зар.
 5 -> смърт, 3 -> безсъзнание и смъртоносна рана, 1 -> безсъзнание
+
+
+%\subsection{здрави/ранени}
+% Брой боеспособни войници с/у брой небоеспособни
+% Ранените забавят армията, и някои от тях никога не се възстановяват
+
+
+%\subsection{Придвижване на армия}
+% фактори - статистики на хората, брой коне, размер на обоза
 
 
 \subsection{Щм, Щс, Щт}
@@ -125,6 +160,10 @@
 %\\
 
 
+% /subsection{Бонус}
+% TODO: base upon notes from Sofia
+
+
 \subsection{Инкремент на обсег}
 За стрелящи оръжия.
 Най-голямото разстояние, на което стрелецът може да се прицели с лекота.
@@ -144,32 +183,6 @@
 Ако е поне равно, се получава (боравене+5) до началото на следващия ход.
 В настоящия ход може да се реализира и нормална атака.
 Иначе се получава (боравене-5).
-
-
-
-\subsection{Дистанция}
-\begin{multicols}{2}
-\begin{enumerate}
-\item{директна (борба)}
-\item{близка (нож, невъоръжен, къс меч)}
-\item{средна (меч 80см, повечето оръжия за една ръка)}
-\item{дълга (дълъг меч, копие, двуръчен меч)}
-\item{отдалечена (пика)}
-\item{извън ръкопашен обхват (стрелящи неща)}
-\end{enumerate}
-Инициатива за първия удар има този с по-дълго оръжие (очевидно).
-Извън оптималната си дистанция, оръжията са на -5 атака и половин щети.
-Придвижване между дистанции се извършва след успешно хвърляне (независимо нападение или защита).
-Придвижването е или една категория в произволна посока или произволен брой категории, без да се преминава през заплашвани от някой враг дистанции.
-\end{multicols}
-\underline{Пример}:
-\emph{Пешо, с копие и нож, напада Жоро, с меч.
-Пешо връхлита и напада с копието.
-Хвърля боравене + d6* < боравене на Жоро.
-Жоро е отбягнал атаката и може да промени дистанцията.
-Пешо заплашва дълга (копие една ръка) и близка(нож)
-Жоро може да избере близка, средна, дълга, отдалечена или да избяга.
-}
 
 
 \subsection{Стрелба}
