Called shots, damage types, feints.

--- a/latex/rules/combat.tex
+++ b/latex/rules/combat.tex
@@ -27,17 +27,22 @@
 дистанция                &          &                &                                                &        \\
 джаб                     &          &                &                                                &        \\
 финт                     &          &                &                                                &        \\
+прицелана атака          &          &                &                                                &        \\
+ръкопашно оръжие         &          &                &                                                &        \\
 боравене                 & боравене &                &                                                &        \\
 Щм, Щс, Щт               & Щ        &                &                                                &        \\
                          &          & нападение      & нападение                                      & бонус  \\
 \end{abstractiontable}
 
 \begin{abstractiontable}{Стрелба}
+прицелена стрелба        &          &                &                                                &        \\
+единична стрелба         &          &                &                                                &        \\
+автоматична стрелба      &          &                &                                                &        \\
 инкремент на обсег       & обсег    & обсег          &                                                &        \\
 \end{abstractiontable}
 
 \begin{abstractiontable}{Ресурси}
-рани                     & ЖТ       & здрави/ранени  & хора                                           &  \\
+ранa                     & ЖТ       & здрави/ранени  & хора                                           &  \\
 \end{abstractiontable}
 
 \begin{abstractiontable}{Придвижване}
@@ -113,21 +118,35 @@
 % фактори - статистики на хората, брой коне, размер на обоза
 
 
-\subsection{Щм, Щс, Щт}
-Мушакщи атаки са бързи, но оставят нападателя открит за контраатака(боравене-5 следващия ход).
-Причиняват високa смъртност(Щ*2).
-\\
-\\
-Сечащи атаки постигат балнс между офанзива и отбрана, защото арката на удара действа като париране/щит.
-\\
-\\
-Трошащи атаки преминават през броня(аб/2).
-Те обаче са бавни, съотeрно лесни за отбягване(боравене-5).
-Заради инертността на оръжието, атаките са трудни за париране (боравене-5 за париране с остро оръжие).
-Същото важи и в обратната ситуация(боравене-5 за париране на остро оръжие).
+\subsection{Инкремент на обсег}
+За стрелящи оръжия.
+Най-голямото разстояние, на което стрелецът може да се прицели с лекота.
+През всеки инкремент метра, атаките търпят по -5 наказание.
 
 
-\subsection{Рани}
+\subsection{Прицелена атака}
+Ръкопашна атака не е насочена към 'врага', а към конкретна част от тялото му.
+\\
+\rowcolors{1}{white}{lightgray}
+\begin{tabular}{l | l | l | l }
+глава & -  \\
+торс  & -  \\
+ръка  & може да бъде извършена на една дистанция по-далеч от нормално  \\
+крак  & -  \\
+\end{tabular}
+
+
+\subsection{Прицелена стрелба}
+\rowcolors{1}{white}{lightgray}
+\begin{tabular}{l | l | l | l }
+глава & модификация -5  \\
+торс  & -  \\
+ръка & модификация -5  \\
+крак & модификация -5  \\
+\end{tabular}
+
+
+\subsection{Ранa}
 След като нападение премине през бронята, делим оставащите точки щети на Сила на ранения:
 \\
 \\
@@ -140,6 +159,7 @@
 >=2        & о: отрязана т: откъсната                                                         & о: отрязан т: откъснат                                                          & унищожено сърце и/или врат                                                       & о: отсечена т: унищожена \\
 \end{tabular}
 
+\noindent
 Кървене: натрупваща се модификация -1/ход.
 Дишането е проверка за сила с трудност -20.
 \\
@@ -164,20 +184,43 @@
 % TODO: base upon notes from Sofia
 
 
-\subsection{Инкремент на обсег}
-За стрелящи оръжия.
-Най-голямото разстояние, на което стрелецът може да се прицели с лекота.
-През всеки инкремент метра, атаките търпят по -5 наказание.
+%\subsection{Навесна стрелба}
 
 
 \subsection{Обсег}
 Разстоянието, на което стрелящото оръжие може да бъде прицелено и нанесе щети.
 
 
-\subsection{Навесна стрелба}
+\subsection{Единична стрелба}
+Тук спадат всички далечни оръжия без автоматичен режим на стрелба. \\
+Защитата на движеща се цел се равнява на нейната ловкост.  \\
+След преминаване оптималния обсег на оръжието, -5 атака.  \\
+Това наказание се натрупва до стигане максилния обсег на оръжието.  \\
+Прицелване повишава атаката с по една точка на ход.  \\
+Прицелване в рамките на максимум <базов показател на умението> хода.
+\subsection{Автоматични оръжия}
+Автоматичните оръжия са способни да произведат повече от един изстрел за ход.
+Хвърлянето за атака е едно.
+Всеки изстрел след първия има <откат> точки по-малко атака, натрупвайки се.
+\subsubsection{Прикритие}
+Прикриване зад дърво: 10
 
 
-\section{Финт}
+\subsection{Щм, Щс, Щт}
+Мушакщи атаки са бързи, но оставят нападателя открит за контраатака(боравене-5 следващия ход).
+Причиняват високa смъртност(Щ*2).
+\\
+\\
+Сечащи атаки постигат балнс между офанзива и отбрана, защото арката на удара действа като париране/щит.
+\\
+\\
+Трошащи атаки преминават през броня(аб/2).
+Те обаче са бавни, съотeрно лесни за отбягване(боравене-5).
+Заради инертността на оръжието, атаките са трудни за париране (боравене-5 за париране с остро оръжие).
+Същото важи и в обратната ситуация(боравене-5 за париране на остро оръжие).
+
+
+\subsection{Финт}
 Финтът е хазарт.
 Сравнява се (боравене с вражеското оръжие + d*) с/у (боравене на врага с нашето оръжие).
 Ако е поне равно, се получава (боравене+5) до началото на следващия ход.
@@ -185,22 +228,7 @@
 Иначе се получава (боравене-5).
 
 
-\subsection{Стрелба}
-\subsubsection{Единична стрелба}
-Тук спадат всички далечни оръжия без автоматичен режим на стрелба. \\
-Защитата на движеща се цел се равнява на нейната ловкост.  \\
-След преминаване оптималния обсег на оръжието, -5 атака.  \\
-Това наказание се натрупва до стигане максилния обсег на оръжието.  \\
-Прицелване повишава атаката с по една точка на ход.  \\
-Прицелване в рамките на максимум <базов показател на умението> хода.
-\subsubsection{Автоматични оръжия}
-Автоматичните оръжия са способни да произведат повече от един изстрел за ход.
-Хвърлянето за атака е едно.
-Всеки изстрел след първия има <откат> точки по-малко атака, натрупвайки се.
-\subsubsection{Прикритие}
-Прикриване зад дърво: 10
-
-\subsection{Оръжия}
+\subsection{Ръкопашно Оръжие}
 \begin{itemize}
 \item {\bfСила} \\
 Това е обсегът на Сила на героят, в който оръжието е ефективно.
